--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,6 +1,3 @@
-/* =========================
-   RESET & VARIABLES
-========================= */
 :root {
   --primary: #f9b500;
   --dark: #111;
@@ -23,6 +20,8 @@ body {
   line-height: 1.6;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 a {
