--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -33,7 +33,7 @@ body {
 a {
     text-decoration: none;
     transition: all 0.2s ease;
-    color: #6b6b6b;
+    color: var(--text-light);
 }
 
 a:hover {
@@ -122,7 +122,6 @@ b {
 .header-menu-item-link {
     font-weight: 600;
     letter-spacing: 0.04em;
-    color: var(--text-medium);
 }
 
 .header-menu li:not(:last-child) {
@@ -130,7 +129,7 @@ b {
 }
 
 .header-menu-burger {
-    background-color: white;
+    background-color: #a3a3a3;
     border: none;
     display: none;
     font-size: 22px;
@@ -308,7 +307,6 @@ main article, .sidebar-item {
     font-size: 20px;
     font-weight: 700;
     line-height: 1.4;
-    color: var(--text-medium);
 }
 
 .info-bar {
@@ -370,6 +368,8 @@ footer {
     width: 100%;
     padding-top: 60px;
     color: #ccc;
+    padding-left: 13px;
+    padding-right: 13px;
 }
 
 .bg-map {
@@ -447,7 +447,7 @@ body.dark-mode .sidebar-list li {
     }
 }
 
-@media (max-width: 1052px) {
+@media (max-width: 767px) {
     .header-menu-burger {
         display: block;
     }
@@ -475,12 +475,16 @@ body.dark-mode .sidebar-list li {
   .app{
     width:100%;
   }
-    
+}
+
+body.dark-mode h3.title {
 }
 
 body.dark-mode .title {
     color: var(--gray);
 }
+
+p {}
 
 section.sidebar-item p {
     margin-bottom: 40px;
@@ -497,7 +501,7 @@ button.form-button {
 @media (max-width: 991px) {
   .intro {
     display: grid;
-    grid-template-columns: 1fr; /* single column */
+    grid-template-columns: 1fr;
     grid-template-areas:
       "box-1"
       "box-2"
@@ -505,13 +509,7 @@ button.form-button {
       "box-4"
       "box-5"
       "box-6";
-    grid-auto-rows: 280px; /* or auto if you want height to adjust */
-    height: auto; /* let height grow based on content */
+    grid-auto-rows: 280px;
+    height: auto;
   }
-}
-
-
-footer {
-    padding-right: 12px;
-    padding-left: 12px;
 }
